fix: remove horizontal scroll when mobile menu is open

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -61,6 +61,7 @@ main {
 }
 
 body.mobile-menu-open {
+    max-width: 100vw;
     overflow-x: hidden;
 }
 
